# RAGS

./: README.md  Requirement.txt  Test.txt  pyproject.toml  typesense.ipynb
agenticrag/: 1-agenticrag.ipynb
data/: .env
data/text_files/: python_intro.txt
data/vector_store/: chroma.sqlite3
notebook/: document.ipynb
